<resources>
    <string name="app_name">Pill Muncher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="explicit_message">You have sent an Explicit Intent!</string>
    <string name="explicit_activation_button_string">Explicit Activation</string>
    <string name="implicit_activation_button_string">Implicit Activation</string>
    <string name="no_text_entered">No Text Entered</string>
    <string name="enter_string">Enter</string>
    <string name="enter_text_here_string">Enter Text Here</string>
    <string name="pill_1">Click here to enter main app</string>
    <string name="pill_2">Pill 2</string>
    <string name="pill_3">Pill 3</string>
    <string name="title_activity_confirmation">Confirmation</string>
    <string name="onCreate">onCreate() calls: 0</string>
    <string name="onStart">onStart() calls: 0</string>
    <string name="onResume">onResume() calls: 0</string>
    <string name="onRestart">onRestart() calls: 0</string>
    <string name="button">Start Activity Two</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="search">Search</string>
    <string name="action_new">New thing</string>
    <string name="title_activity_activity2">Activity2</string>
    <string name="you_took_it">Thanks for taking your pill</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Change your settings</string>
    <string name="hamburger">Do you want to eat a hamburger?</string>
    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>

    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Temperature Units</string>

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric">Metric</string>

    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial">Imperial</string>

    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <string name="action_map">Map Location</string>

    <string name="action_share">Share</string>
    <string name="title_activity_main_box">Box</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_box">Box</string>


    <string name="open_weather_maps_app_id">11111</string>
</resources>
