<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:orderInCategory="80"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_new"
        android:title="@string/action_new"
        android:orderInCategory="50"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_new"
        />


</menu>
